<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookManager</string>
    <string name="second_activity">主界面</string>
    <string name="reader_activity">读者信息管理</string>
    <string name="book_activity">图书信息管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="textTitle">欢迎登录</string>
    <string name="textUser">用户名：</string>
    <string name="textPassword">密码：</string>
    <string name="buttonEnter">确认</string>
    
    <string name="buttonReader">读者信息管理</string>
    <string name="buttonBook">图书信息管理</string>
    
    <string name="textReaderId">ID：</string>
    <string name="textReaderName">姓名：</string>
    <string name="textReaderSex">性别：</string>
    <string name="textReaderAge">年龄：</string>
    <string name="textReaderFaculty">学院：</string>
    
    <string name="textBookId">ID：</string>
    <string name="textBookName">书名：</string>
    <string name="textBookPress">出版社：</string>
    <string name="textBookAuthor">作者：</string>
    <string name="textBookSort">分类：</string>
    
    <string name="buttonAdd">增加</string>
    <string name="buttonDelete">删除</string>
    <string name="buttonModify">修改</string>
    <string name="buttonView">查看</string>

</resources>
