<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textBookId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textBookId" />

        <EditText
            android:id="@+id/editBookId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textBookName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textBookName" />

        <EditText
            android:id="@+id/editBookName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textBookPress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textBookPress" />

        <Spinner
            android:id="@+id/spinnerBookPress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textBookAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textBookAuthor" />

        <EditText
            android:id="@+id/editBookAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textBookSort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textBookSort" />

        <Spinner
            android:id="@+id/spinnerBookSort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAdd" />

        <Button
            android:id="@+id/buttonDelet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDelete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonModify" />

        <Button
            android:id="@+id/buttonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonView" />

    </LinearLayout>

</LinearLayout>