<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textReaderId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textReaderId" />

        <EditText
            android:id="@+id/editReaderId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textReaderName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textReaderName" />

        <EditText
            android:id="@+id/editReaderName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textReaderSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textReaderSex" />

        <Spinner
            android:id="@+id/spinnerReaderSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textReaderAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textReaderAge" />

        <EditText
            android:id="@+id/editReaderAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5" >

        <TextView
            android:id="@+id/textReaderFaculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textReaderFaculty" />

        <Spinner
            android:id="@+id/spinnerReaderFaculty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAdd" />

        <Button
            android:id="@+id/buttonDelet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonDelete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/buttonModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonModify" />

        <Button
            android:id="@+id/buttonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonView" />

    </LinearLayout>

</LinearLayout>